Fix: Can't word wrap on IE10

--- a/src/less/table.less
+++ b/src/less/table.less
@@ -156,6 +156,7 @@
   &-word-wrap &-cell-content {
     white-space: unset;
     word-break: break-all;
+    word-wrap: break-word;
   }
 
   &-row-expanded {
